--- a/index.ipynb
+++ b/index.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,8 +40,8 @@
     "import numpy as np\n",
     "\n",
     "# Set up the variables\n",
-    "A = None\n",
-    "B = None"
+    "A = np.random.rand(200,200)\n",
+    "B = np.random.rand(200,200)"
    ]
   },
   {
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pure Python Time: None sec.\n"
+      "Pure Python Time: 5.779987696000035 sec.\n"
      ]
     }
    ],
@@ -76,12 +76,18 @@
     "import timeit\n",
     "\n",
     "# Start the timer\n",
-    "start = None\n",
+    "start = timeit.default_timer()\n",
     "\n",
     "# Matrix multiplication in pure Python\n",
+    "C = np.zeros((200,200))\n",
     "\n",
+    "for i in range(200):\n",
+    "    for j in range(200):\n",
+    "        for k in range(200):\n",
+    "      \n",
+    "            C[i,k] += A[i,j]*B[j,k]\n",
     "\n",
-    "time_spent = None\n",
+    "time_spent = timeit.default_timer() - start\n",
     "\n",
     "print('Pure Python Time:', time_spent, 'sec.')"
    ]
@@ -103,18 +109,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numpy Time: None sec.\n"
+      "Numpy Time: 0.1094152230000418 sec.\n"
      ]
     }
    ],
    "source": [
     "# start the timer\n",
-    "start = None\n",
+    "start = timeit.default_timer()\n",
     "\n",
     "# Matrix multiplication in numpy\n",
+    "C = A.dot(B)\n",
     "\n",
-    "\n",
-    "time_spent = None\n",
+    "time_spent = timeit.default_timer() - start\n",
     "print('Numpy Time:', time_spent, 'sec.')"
    ]
   },
@@ -122,7 +128,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Your comments "
+    "### Your comments \n",
+    "\n",
+    "Numpy is much faster than Python and allows for a greater amount of multi-dimensional arrays"
    ]
   },
   {
@@ -145,9 +153,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -159,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
